--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover"
     />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="manifest" href="/manifest.json"></link>
     <title>%WEB_TITLE%</title>
     <style>
